--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-SSH-AuthorizedKeysFile
-version:      0.01
+version:      0.02
 version_from: lib/Net/SSH/AuthorizedKeysFile.pm
 installdirs:  site
 requires:
+    Class::Accessor:               0
+    Sysadm::Install:               0.2
+    Test::More:                    0
+    Text::ParseWords:              0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30
