--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Net-SSH-AuthorizedKeysFile
-version:      0.02
-version_from: lib/Net/SSH/AuthorizedKeysFile.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Net-SSH-AuthorizedKeysFile
+version:             0.03
+abstract:            Read and modify ssh's authorized_keys files
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.31
+distribution_type:   module
+requires:     
     Class::Accessor:               0
     Sysadm::Install:               0.2
     Test::More:                    0
     Text::ParseWords:              0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Mike Schilli <m@perlmeister.com>
