--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,14 @@
---- #YAML:1.0
-name:                Net-SSH-AuthorizedKeysFile
-version:             0.03
-abstract:            Read and modify ssh's authorized_keys files
-license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.31
-distribution_type:   module
-requires:     
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Net-SSH-AuthorizedKeysFile
+version:      0.04
+version_from: lib/Net/SSH/AuthorizedKeysFile.pm
+installdirs:  site
+requires:
     Class::Accessor:               0
     Sysadm::Install:               0.2
     Test::More:                    0
     Text::ParseWords:              0
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
-author:
-    - Mike Schilli <m@perlmeister.com>
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.30_01
