--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-SSH-AuthorizedKeysFile
-version:            0.06
+version:            0.10
 abstract:           Read and modify ssh's authorized_keys files
 author:
     - Mike Schilli <m@perlmeister.com>
@@ -11,8 +11,9 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Class::Accessor:   0
-    Sysadm::Install:   0.2
+    File::Copy:        0
+    File::Temp:        0
+    Log::Log4perl:     1
     Test::More:        0
     Text::ParseWords:  0
 no_index:
