--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-SSH-AuthorizedKeysFile
-version:            0.12
+version:            0.13
 abstract:           Read and modify ssh's authorized_keys files
 author:
     - Mike Schilli <m@perlmeister.com>
@@ -11,7 +11,9 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
+    Digest::MD5:       0
     File::Copy:        0
+    File::Spec:        0
     File::Temp:        0
     Log::Log4perl:     1
     Test::More:        0
