--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,30 @@
---- #YAML:1.0
-name:               Net-SSH-AuthorizedKeysFile
-version:            0.16
-abstract:           Read and modify ssh's authorized_keys files
+---
+abstract: "Read and modify ssh's authorized_keys files"
 author:
-    - Mike Schilli <m@perlmeister.com>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Mike Schilli <m@perlmeister.com>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Digest::MD5:       0
-    File::Copy:        0
-    File::Spec:        0
-    File::Temp:        0
-    Log::Log4perl:     1
-    Test::More:        0
-    Text::ParseWords:  0
-resources:
-    repository:  http://github.com/mschilli/net-ssh-authorizedkeysfile-perl
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+  ExtUtils::MakeMaker: '0'
+configure_requires:
+  ExtUtils::MakeMaker: '0'
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.142690'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: Net-SSH-AuthorizedKeysFile
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Digest::MD5: '0'
+  File::Copy: '0'
+  File::Spec: '0'
+  File::Temp: '0'
+  Log::Log4perl: '1'
+  Test::More: '0'
+  Text::ParseWords: '0'
+resources:
+  repository: http://github.com/mschilli/net-ssh-authorizedkeysfile-perl
+version: '0.17'
